--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
     "scanner": "npx i18next-scanner --config i18next-scanner.config.js"
   },
   "dependencies": {
-    "react": "^18.0.2",
-    "react-dom": "^18.0.2",
-    "react-i18next": "^11.15.0",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/material": "^6.4.2",
     "i18next": "^21.6.0",
     "i18next-browser-languagedetector": "^6.1.0",
-    "i18next-http-backend": "^1.3.0"
+    "i18next-http-backend": "^1.3.0",
+    "react": "^18.0.2",
+    "react-dom": "^18.0.2",
+    "react-i18next": "^11.15.0"
   },
   "devDependencies": {
     "@types/react": "^17.0.0",
