--- a/package.json
+++ b/package.json
@@ -19,11 +19,14 @@
     "i18next-http-backend": "^1.3.0",
     "react": "^18.0.2",
     "react-dom": "^18.0.2",
-    "react-i18next": "^11.15.0"
+    "react-i18next": "^11.15.0",
+    "@types/react-dom": "18.3.5",
+    "@types/webpack": "5.28.5",
+    "@types/webpack-dev-server": "4.7.1"
   },
   "devDependencies": {
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
+    "@types/react": "^18.0.0",
+    "@types/react-dom": "^18.0.0",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
     "css-loader": "^6.0.0",
