--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,5 +16,5 @@
     "outDir": "./dist",
     "jsx": "react-jsx"
   },
-  "include": ["src/**/*"]
+  "include": ["src", "react-dom-client.d.ts"]
 }
