--- a/package.json
+++ b/package.json
@@ -13,16 +13,18 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^6.4.2",
     "@mui/material": "^6.4.2",
+    "@types/react-dom": "18.3.5",
+    "@types/webpack": "5.28.5",
+    "@types/webpack-dev-server": "4.7.1",
     "i18next": "^21.6.0",
     "i18next-browser-languagedetector": "^6.1.0",
     "i18next-http-backend": "^1.3.0",
     "react": "^18.0.2",
     "react-dom": "^18.0.2",
     "react-i18next": "^11.15.0",
-    "@types/react-dom": "18.3.5",
-    "@types/webpack": "5.28.5",
-    "@types/webpack-dev-server": "4.7.1"
+    "react-router-dom": "^7.1.5"
   },
   "devDependencies": {
     "@types/react": "^18.0.0",
