--- a/package.json
+++ b/package.json
@@ -13,16 +13,18 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^6.4.2",
     "@mui/material": "^6.4.2",
+    "@types/react-dom": "18.3.5",
+    "@types/webpack": "5.28.5",
+    "@types/webpack-dev-server": "4.7.1",
     "i18next": "^21.6.0",
     "i18next-browser-languagedetector": "^6.1.0",
     "i18next-http-backend": "^1.3.0",
     "react": "^18.0.2",
     "react-dom": "^18.0.2",
     "react-i18next": "^11.15.0",
-    "@types/react-dom": "18.3.5",
-    "@types/webpack": "5.28.5",
-    "@types/webpack-dev-server": "4.7.1"
+    "react-icons": "^5.4.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.0",
@@ -34,12 +36,15 @@
     "eslint-config-prettier": "^8.0.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.0.0",
+    "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.0.0",
     "i18next-scanner": "^3.0.0",
     "prettier": "^2.0.0",
     "style-loader": "^3.0.0",
+    "svgo-loader": "^4.0.0",
     "ts-loader": "^9.0.0",
     "typescript": "^4.0.0",
+    "url-loader": "^4.1.1",
     "webpack": "^5.0.0",
     "webpack-cli": "^4.0.0",
     "webpack-dev-server": "^4.0.0"
